--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   },
   "scripts": {
     "start": "concurrently --kill-others \"json-server --watch ./data/db.json --port 8000\" \"npm run start-react\"",
-    "build": "concurrently --kill-others \"json-server --watch ./data/db.json --port 8000\" \"react-scripts build\"",
+    "build": "concurrently --kill-others \"json-server --watch ./data/db.json --port 8000\" \"react-scripts build-react\"",
     "start-react": "react-scripts start",
-    "react-build": "react-scripts build"
+    "build-react": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
