--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "start": "concurrently --kill-others \"json-server --watch ./data/db.json --port 8000\" \"npm run start-react\"",
+    "build": "concurrently --kill-others \"json-server --watch ./data/db.json --port 8000\" \"npm run build-react\"",
+    "start-react": "react-scripts start",
+    "build-react": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
